--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/* The Best CRM Ever */
+
+
 /* Darck Theme*/
 
 :root {
@@ -134,9 +137,9 @@ section {
     border-radius: 4vw;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 1000px) {
     section {
-        width: 90%;
+        width: 70%;
     }
 }
 
