The Best CRM Ever

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ section {
     border-radius: 4vw;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
     section {
         width: 70%;
     }
