--- a/css/main.css
+++ b/css/main.css
@@ -68,14 +68,6 @@ nav button {
     border-radius: 50%;
 }
 
-
-/*.theme:hover {
-    --bg: #111;
-    --shadow: #000;
-    --blocks: #222;
-    --el: #fff;
-}*/
-
 button,
 section,
 input[type="text"] {
@@ -120,7 +112,7 @@ div:hover>.h {
     height: 100%;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-height: 550px) {
     .info {
         display: none;
     }
@@ -151,7 +143,8 @@ section {
 
 @media screen and (max-width: 800px) {
     section {
-        width: 70%;
+        width: 75%;
+        padding: 30px;
     }
 }
 
