--- a/css/main.css
+++ b/css/main.css
@@ -342,8 +342,8 @@ th {
     top: 0;
     position: sticky;
     padding-bottom: 10px;
-    background: var(--blocks);
-    box-shadow: 0 0 10px 10px var(--blocks);
+    /*background: var(--blocks);*/
+    /*box-shadow: 0 0 10px 10px var(--blocks);*/
 }
 
 tbody tr {
