--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
     padding: 0;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     background: var(--bg);
-    color: var(--el);
+    /*color: var(--el);*/
     /* Pattern: */
     /*background-image: url('../img/flamingo.svg');*/
     /*background-attachment: fixed;*/
