--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ input[type="text"]:focus {
 .search button {
     width: 200px;
     height: 100%;
+    min-width: 50px;
     transition: 1s;
 }
 
@@ -214,15 +215,6 @@ input[type="text"]:focus {
         width: 50px;
         padding-top: 14px;
     }
-}
-
-input .opened {
-    width: calc(100% - 100px);
-}
-
-button .opened {
-    width: 50px;
-    padding-top: 14px;
 }
 
 form {
