--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,14 @@ header {
     height: 100%;
     margin: 0;
     padding: 0;
+    z-index: 1;
 }
+
+/*header {
+    right: 0;
+    width: 100px;
+    height: 100%;
+}*/
 
 nav {
     margin: 0;
